--- a/components/plasmic/isv/PlasmicLoading.module.css
+++ b/components/plasmic/isv/PlasmicLoading.module.css
@@ -1,16 +1,33 @@
 .root {
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
   position: relative;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  background: none;
+  min-width: 0;
+  min-height: 0;
+}
+.freeBox {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   width: auto;
   height: auto;
-  justify-content: flex-start;
-  align-items: center;
+  max-width: 100%;
+  background: #ffffff;
+  padding: 8px;
 }
 .img {
-  position: relative;
   object-fit: cover;
   max-width: 100%;
+  width: 150px;
+  height: 150px;
+  flex-shrink: 0;
 }
 .img > picture > img {
   object-fit: cover;
