--- a/components/plasmic/isv/PlasmicSuccess.module.css
+++ b/components/plasmic/isv/PlasmicSuccess.module.css
@@ -9,9 +9,21 @@
   min-width: 0;
   min-height: 0;
 }
+.link__b44Od {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: flex-start;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  z-index: 2;
+  min-width: 0;
+  padding: 0px;
+}
 .header:global(.__wab_instance) {
   max-width: 100%;
-  position: relative;
 }
 .freeBox__jsI9F {
   display: flex;
@@ -61,7 +73,7 @@
 .h2 {
   color: var(--token-GDRRKUQBtHsOGH);
 }
-.link {
+.link__wmkFi {
   position: relative;
   width: 100%;
   height: auto;
@@ -70,5 +82,6 @@
   font-size: 30px;
   cursor: pointer;
   min-width: 0;
+  display: none;
   margin: 50px 0px 0px;
 }
