--- a/components/plasmic/isv/PlasmicAddItem.module.css
+++ b/components/plasmic/isv/PlasmicAddItem.module.css
@@ -101,7 +101,6 @@
   width: 100%;
   height: auto;
   max-width: 100%;
-  margin-bottom: 200px;
   min-width: 0;
   padding: 0px;
 }
@@ -180,6 +179,18 @@
   height: auto;
   max-width: 800px;
   min-width: 0;
+}
+.scrollSpace {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  height: 200px;
+  max-width: 100%;
+  min-width: 0;
+  padding: 8px;
 }
 .freeBox___1Lzs {
   display: flex;
