--- a/components/plasmic/isv/PlasmicAddItem.module.css
+++ b/components/plasmic/isv/PlasmicAddItem.module.css
@@ -171,6 +171,11 @@
   max-width: 800px;
   min-width: 0;
 }
+.text__uSfS {
+  width: auto;
+  height: auto;
+  max-width: 800px;
+}
 .repeatedAddItemRow:global(.__wab_instance) {
   position: relative;
 }
@@ -179,6 +184,11 @@
   height: auto;
   max-width: 800px;
   min-width: 0;
+}
+.text__eT6Gf {
+  width: auto;
+  height: auto;
+  max-width: 800px;
 }
 .scrollSpace {
   display: flex;
@@ -229,13 +239,17 @@
   font-weight: 600;
   font-size: 18px;
 }
-.text__cQd1X {
+.freeBox__cQd1X {
   position: relative;
   width: auto;
   height: auto;
   max-width: 800px;
-  font-weight: 600;
+  display: flex;
+  flex-direction: row;
+}
+.slotTargetTotal {
   font-size: 18px;
+  font-weight: 600;
 }
 .selectedOptionValues {
   flex-direction: column;
