--- a/components/plasmic/isv/PlasmicMenuItem.module.css
+++ b/components/plasmic/isv/PlasmicMenuItem.module.css
@@ -103,16 +103,16 @@
   justify-content: center;
   width: 30%;
   height: 100%;
-  max-width: 150px;
-  min-width: 30%;
+  max-width: 130px;
+  min-width: 130px;
   min-height: 0;
   padding: 0px;
 }
 .img {
   object-fit: cover;
   width: 100%;
-  height: 150px;
-  min-height: 150px;
+  height: 130px;
+  min-height: 130px;
   min-width: 0;
   flex-shrink: 0;
   border-radius: 20%;
