--- a/components/plasmic/isv/PlasmicAddItem.module.css
+++ b/components/plasmic/isv/PlasmicAddItem.module.css
@@ -122,39 +122,11 @@
   > img {
   margin-top: 30px;
 }
-.freeBox___6DDi9 {
-  flex-direction: column;
-  display: flex;
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  position: relative;
-  min-width: 0;
-  padding: 0px;
-}
-.freeBox___6DDi9 > :global(.__wab_flex-container) {
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  min-width: 0;
-  margin-top: calc(0px - 5px);
-  height: calc(100% + 5px);
-}
-.freeBox___6DDi9 > :global(.__wab_flex-container) > *,
-.freeBox___6DDi9 > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
-.freeBox___6DDi9 > :global(.__wab_flex-container) > picture > img,
-.freeBox___6DDi9
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
-  margin-top: 5px;
-}
-.freeBox__gWWdM {
+.freeBox___6Pw6B {
   display: flex;
   position: relative;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  align-items: stretch;
   justify-content: flex-start;
   width: 100%;
   height: auto;
@@ -162,47 +134,14 @@
   min-width: 0;
   padding: 0px;
 }
-.addItemRow:global(.__wab_instance) {
-  position: relative;
-}
-.text__yQiHh {
-  width: 100%;
-  height: auto;
-  max-width: 800px;
-  min-width: 0;
-}
-.text__uSfS {
-  width: auto;
-  height: auto;
-  max-width: 800px;
-}
-.repeatedAddItemRow:global(.__wab_instance) {
-  position: relative;
-}
-.text___3By {
-  width: 100%;
-  height: auto;
-  max-width: 800px;
-  min-width: 0;
-}
-.text__eT6Gf {
-  width: auto;
-  height: auto;
-  max-width: 800px;
-}
-.scrollSpace {
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  width: 100%;
-  height: 200px;
+.addItemOption:global(.__wab_instance) {
   max-width: 100%;
-  min-width: 0;
-  padding: 8px;
+  position: relative;
 }
-.freeBox___1Lzs {
+.scrollSpace:global(.__wab_instance) {
+  position: relative;
+}
+.footer {
   display: flex;
   position: fixed;
   flex-direction: column;
