--- a/components/plasmic/isv/PlasmicAddItemRow.module.css
+++ b/components/plasmic/isv/PlasmicAddItemRow.module.css
@@ -27,15 +27,63 @@
   justify-content: space-between;
   min-width: 0;
 }
+.freeBox___9XzJs {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  min-width: 0;
+  padding: 8px;
+}
 .freeBox__lbV7J {
+  flex-direction: row;
   position: relative;
   width: 100%;
   height: auto;
   max-width: 100px;
   align-self: center;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end;
   min-width: 0;
+  display: none;
+}
+.freeBox__lbV7J > :global(.__wab_flex-container) {
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  min-width: 0;
+  margin-left: calc(0px - 10px);
+  width: calc(100% + 10px);
+}
+.freeBox__lbV7J > :global(.__wab_flex-container) > *,
+.freeBox__lbV7J > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox__lbV7J > :global(.__wab_flex-container) > picture > img,
+.freeBox__lbV7J
+  > :global(.__wab_flex-container)
+  > :global(.__wab_slot)
+  > picture
+  > img {
+  margin-left: 10px;
+}
+.freeBoxshowPrice__lbV7JuK411 {
+  display: flex;
+}
+.freeBoxshowQuantity_notInitial_showPrice__lbV7JbtqIwUK411 {
+  display: none;
+}
+.freeBoxshowQuantity_initial_showPrice__lbV7Jnzcw9UK411 {
+  display: none;
+}
+.quantity:global(.__wab_instance) {
+  max-width: 100%;
+  position: relative;
+  display: none;
+}
+.quantityshowQuantity_notInitial:global(.__wab_instance) {
+  display: flex;
+}
+.quantityshowQuantity_initial:global(.__wab_instance) {
+  display: flex;
 }
