--- a/components/plasmic/isv/PlasmicButton.module.css
+++ b/components/plasmic/isv/PlasmicButton.module.css
@@ -6,6 +6,8 @@
   cursor: pointer;
   transition-property: background;
   transition-duration: 0.1s;
+  -webkit-transition-property: background;
+  -webkit-transition-duration: 0.1s;
   border-radius: 6px;
   padding: 12px 6px;
   border-width: 0px;
