--- a/components/plasmic/isv/PlasmicCartButton.module.css
+++ b/components/plasmic/isv/PlasmicCartButton.module.css
@@ -11,6 +11,8 @@
   transition-property: all;
   transition-duration: 1s;
   position: relative;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 1s;
   border-radius: 50%;
   padding: 8px;
 }
