--- a/components/plasmic/isv/PlasmicHomepage.module.css
+++ b/components/plasmic/isv/PlasmicHomepage.module.css
@@ -255,7 +255,7 @@
   > img {
   margin-top: 25px;
 }
-.contentfulFetcher:global(.__wab_instance) {
+.event:global(.__wab_instance) {
   max-width: 100%;
   object-fit: cover;
   position: relative;
@@ -264,6 +264,7 @@
 }
 .menuItem:global(.__wab_instance) {
   max-width: 100%;
+  display: flex;
 }
 .contentfulRichText:global(.__wab_instance) {
   max-width: 100%;
