--- a/components/plasmic/isv/PlasmicQuantity.module.css
+++ b/components/plasmic/isv/PlasmicQuantity.module.css
@@ -18,11 +18,18 @@
 .root > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
   margin-left: 20px;
 }
+.rootinitialState > :global(.__wab_flex-container) {
+  align-items: center;
+  justify-content: flex-end;
+}
 .minusButton:global(.__wab_instance) {
   max-width: 100%;
   position: relative;
   width: 40px;
   flex-shrink: 0;
+}
+.minusButtoninitialState:global(.__wab_instance) {
+  display: none;
 }
 .svg__wKudk {
   position: relative;
@@ -51,6 +58,9 @@
   display: flex;
   flex-direction: row;
   min-width: 0;
+}
+.freeBoxinitialState {
+  display: none;
 }
 .slotTargetQuantity {
   font-size: 18px;
