--- a/components/plasmic/isv/PlasmicAddItem2.module.css
+++ b/components/plasmic/isv/PlasmicAddItem2.module.css
@@ -1,13 +1,26 @@
 .root {
-  display: flex;
   flex-direction: column;
+  display: flex;
   position: relative;
   width: 100%;
   height: 100%;
+  min-width: 0;
+  min-height: 0;
+}
+.root > :global(.__wab_flex-container) {
+  flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   min-width: 0;
   min-height: 0;
+  margin-top: calc(0px - 10px);
+  height: calc(100% + 10px);
+}
+.root > :global(.__wab_flex-container) > *,
+.root > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.root > :global(.__wab_flex-container) > picture > img,
+.root > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
+  margin-top: 10px;
 }
 .contentfulFetcher:global(.__wab_instance) {
   max-width: 100%;
@@ -17,10 +30,11 @@
   width: 100%;
   height: 100%;
   flex-direction: column;
+  align-self: flex-end;
   min-width: 0;
   min-height: 0;
 }
-.freeBox__t5NS {
+.freeBox___1BbWp {
   display: flex;
   position: relative;
   flex-direction: row;
@@ -33,7 +47,7 @@
   min-width: 0;
   padding: 8px;
 }
-.freeBox__vamCt {
+.freeBox__mR24D {
   position: relative;
   width: 100%;
   height: auto;
@@ -43,7 +57,7 @@
   flex-direction: row;
   min-width: 0;
 }
-.text__mLb7K {
+.text__jPivk {
   font-size: 20px;
   color: var(--token-9MkmzesVuXPDf0);
   font-weight: 700;
@@ -62,7 +76,7 @@
   min-height: 0;
   padding: 8px;
 }
-.svg__oDfUv {
+.svg__p2GHb {
   position: relative;
   object-fit: cover;
   max-width: 100%;
@@ -224,13 +238,13 @@
   max-width: 100%;
   width: auto;
 }
-.svg__fshV5 {
+.svg__csCb {
   position: relative;
   object-fit: cover;
   width: 1em;
   height: 1em;
 }
-.svg__aBsuh {
+.svg__sExuO {
   position: relative;
   object-fit: cover;
   width: 1em;
