--- a/components/plasmic/isv/PlasmicAddItem.module.css
+++ b/components/plasmic/isv/PlasmicAddItem.module.css
@@ -9,6 +9,10 @@
   min-width: 0;
   min-height: 0;
 }
+.header:global(.__wab_instance) {
+  max-width: 100%;
+  position: relative;
+}
 .contentfulFetcher:global(.__wab_instance) {
   max-width: 100%;
   object-fit: cover;
