--- a/components/plasmic/isv/PlasmicCheckout.module.css
+++ b/components/plasmic/isv/PlasmicCheckout.module.css
@@ -155,6 +155,9 @@
   min-width: 0;
   padding: 8px;
 }
+.freeBoxisAdmin__xwlAEwWf5 {
+  display: flex;
+}
 .text___3Cm0P {
   width: auto;
   height: auto;
@@ -212,6 +215,9 @@
   > img {
   margin-left: 10px;
 }
+.freeBoxisAdmin__rW7TUwWf5 {
+  display: flex;
+}
 .text__ngWcr {
   position: relative;
   width: auto;
@@ -238,7 +244,7 @@
   width: 1em;
   height: 1em;
 }
-.freeBox__nmWzQ {
+.freeBox__uwY6I {
   flex-direction: row;
   display: flex;
   position: relative;
@@ -246,6 +252,63 @@
   height: auto;
   max-width: 100%;
   min-width: 0;
+  padding: 0px 10px;
+}
+.freeBox__uwY6I > :global(.__wab_flex-container) {
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  min-width: 0;
+  margin-left: calc(0px - 10px);
+  width: calc(100% + 10px);
+}
+.freeBox__uwY6I > :global(.__wab_flex-container) > *,
+.freeBox__uwY6I > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox__uwY6I > :global(.__wab_flex-container) > picture > img,
+.freeBox__uwY6I
+  > :global(.__wab_flex-container)
+  > :global(.__wab_slot)
+  > picture
+  > img {
+  margin-left: 10px;
+}
+.freeBoxisAdmin__uwY6IwWf5 {
+  display: none;
+}
+.text__ntkgf {
+  position: relative;
+  width: auto;
+  height: auto;
+  max-width: 800px;
+  min-width: 50px;
+  font-size: 14px;
+}
+.emailInput:global(.__wab_instance) {
+  max-width: 100%;
+  position: relative;
+  width: 100%;
+  min-width: 0;
+}
+.svg__cMtOk {
+  position: relative;
+  object-fit: cover;
+  width: 1em;
+  height: 1em;
+}
+.svg__jeWql {
+  position: relative;
+  object-fit: cover;
+  width: 1em;
+  height: 1em;
+}
+.freeBox__nmWzQ {
+  flex-direction: row;
+  position: relative;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  min-width: 0;
+  display: none;
   padding: 0px 10px;
 }
 .freeBox__nmWzQ > :global(.__wab_flex-container) {
@@ -266,6 +329,9 @@
   > img {
   margin-left: 10px;
 }
+.freeBoxisAdmin__nmWzQwWf5 {
+  display: flex;
+}
 .text__idsbd {
   position: relative;
   width: auto;
@@ -274,21 +340,38 @@
   min-width: 50px;
   font-size: 14px;
 }
-.emailInput:global(.__wab_instance) {
+.textisAdmin__idsbDwWf5 {
+  min-width: 150px;
+}
+.freeBox__cjmAg {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: flex-start;
+  width: 100%;
+  height: auto;
   max-width: 100%;
-  position: relative;
+  min-width: 0;
+  padding: 0px;
 }
-.svg__cF8Mv {
-  position: relative;
-  object-fit: cover;
-  width: 1em;
-  height: 1em;
+.freeBoxisAdmin__cjmAGwWf5 {
+  width: 100%;
+  min-width: 0;
+  display: flex;
+  padding: 0px;
 }
-.svg__rs7Ga {
+.paymentInput:global(.__wab_instance) {
+  max-width: 100%;
+  width: 100%;
+  min-width: 0;
+  display: flex;
+}
+.paymentInputisAdmin:global(.__wab_instance) {
+  display: flex;
+}
+.option:global(.__wab_instance) {
   position: relative;
-  object-fit: cover;
-  width: 1em;
-  height: 1em;
 }
 .freeBox__h27MF {
   display: flex;
