--- a/components/plasmic/isv/PlasmicHeader.module.css
+++ b/components/plasmic/isv/PlasmicHeader.module.css
@@ -1,29 +1,74 @@
 .root {
-  flex-direction: row;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: flex-start;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  min-width: 0;
+  padding: 0px;
+}
+.freeBox__qbnXe {
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  align-self: flex-start;
+  background: #000000;
+  min-width: 0;
+  display: none;
+  padding: 8px;
+}
+.freeBoxisAdmin__qbnXe1KjFr {
+  display: flex;
+}
+.text__b70Yv {
+  position: relative;
+  width: 100%;
+  height: auto;
+  max-width: 800px;
+  color: var(--token-9MkmzesVuXPDf0);
+  font-size: 20px;
+  text-align: center;
+  min-width: 0;
+}
+.freeBox___9LywB {
+  flex-direction: column;
   display: flex;
   width: 100%;
   height: auto;
   max-width: 100%;
   background: var(--token-ThnFxYwNOaz4P);
-  position: relative;
   min-width: 0;
   padding: 8px 20px;
 }
-.root > :global(.__wab_flex-container) {
-  flex-direction: row;
+.freeBox___9LywB > :global(.__wab_flex-container) {
+  flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
   min-width: 0;
-  margin-left: calc(0px - 20px);
-  width: calc(100% + 20px);
+  margin-top: calc(0px - 20px);
+  height: calc(100% + 20px);
 }
-.root > :global(.__wab_flex-container) > *,
-.root > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
-.root > :global(.__wab_flex-container) > picture > img,
-.root > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
-  margin-left: 20px;
+.freeBox___9LywB > :global(.__wab_flex-container) > *,
+.freeBox___9LywB > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox___9LywB > :global(.__wab_flex-container) > picture > img,
+.freeBox___9LywB
+  > :global(.__wab_flex-container)
+  > :global(.__wab_slot)
+  > picture
+  > img {
+  margin-top: 20px;
 }
-.text {
+.freeBoxhideHeader___9LywBQhGLc {
+  display: none;
+}
+.text__q840C {
   width: 100%;
   height: auto;
   max-width: 800px;
