--- a/components/plasmic/isv/PlasmicLoading.module.css
+++ b/components/plasmic/isv/PlasmicLoading.module.css
@@ -32,6 +32,6 @@
 .img > picture > img {
   object-fit: cover;
 }
-.img > .__wab_img-spacer > img {
+.img > :global(.__wab_img-spacer) > img {
   object-fit: cover;
 }
