--- a/components/plasmic/isv/PlasmicMenuItem.module.css
+++ b/components/plasmic/isv/PlasmicMenuItem.module.css
@@ -120,7 +120,7 @@
 .img > picture > img {
   object-fit: cover;
 }
-.img > .__wab_img-spacer > img {
+.img > :global(.__wab_img-spacer) > img {
   object-fit: cover;
 }
 .freeBox__qrX8 {
