--- a/components/plasmic/isv/PlasmicSelect__OptionGroup.module.css
+++ b/components/plasmic/isv/PlasmicSelect__OptionGroup.module.css
@@ -37,28 +37,47 @@
   font-size: 12px;
   font-weight: 600;
 }
-.slotTargetTitle > .__wab_text,
-.slotTargetTitle > .__wab_slot-string-wrapper,
-.slotTargetTitle > .__wab_slot > .__wab_text,
-.slotTargetTitle > .__wab_slot > .__wab_slot-string-wrapper,
-.slotTargetTitle > .__wab_slot > .__wab_slot > .__wab_text,
-.slotTargetTitle > .__wab_slot > .__wab_slot > .__wab_slot-string-wrapper,
-.slotTargetTitle > .__wab_slot > .__wab_slot > .__wab_slot > .__wab_text,
+.slotTargetTitle > :global(.__wab_text),
+.slotTargetTitle > :global(.__wab_slot-string-wrapper),
+.slotTargetTitle > :global(.__wab_slot) > :global(.__wab_text),
+.slotTargetTitle > :global(.__wab_slot) > :global(.__wab_slot-string-wrapper),
 .slotTargetTitle
-  > .__wab_slot
-  > .__wab_slot
-  > .__wab_slot
-  > .__wab_slot-string-wrapper {
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > :global(.__wab_text),
+.slotTargetTitle
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > :global(.__wab_slot-string-wrapper),
+.slotTargetTitle
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > :global(.__wab_text),
+.slotTargetTitle
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > :global(.__wab_slot-string-wrapper) {
   text-overflow: ellipsis;
 }
 .slotTargetTitle > *,
-.slotTargetTitle > .__wab_slot > *,
-.slotTargetTitle > .__wab_slot > .__wab_slot > *,
-.slotTargetTitle > .__wab_slot > .__wab_slot > .__wab_slot > *,
+.slotTargetTitle > :global(.__wab_slot) > *,
+.slotTargetTitle > :global(.__wab_slot) > :global(.__wab_slot) > *,
+.slotTargetTitle
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > *,
 .slotTargetTitle > picture > img,
-.slotTargetTitle > .__wab_slot > picture > img,
-.slotTargetTitle > .__wab_slot > .__wab_slot > picture > img,
-.slotTargetTitle > .__wab_slot > .__wab_slot > .__wab_slot > picture > img {
+.slotTargetTitle > :global(.__wab_slot) > picture > img,
+.slotTargetTitle > :global(.__wab_slot) > :global(.__wab_slot) > picture > img,
+.slotTargetTitle
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > picture
+  > img {
   overflow: hidden;
 }
 .optionsContainer {
