--- a/components/plasmic/isv/plasmic_isv.module.css
+++ b/components/plasmic/isv/plasmic_isv.module.css
@@ -445,7 +445,7 @@
 .__wab_expr_html_text {
   white-space: normal;
 }
-.root_reset {
+:where(.root_reset) {
   font-family: var(--mixin-QuasrgtkFmWR_font-family);
   font-size: var(--mixin-QuasrgtkFmWR_font-size);
   font-weight: var(--mixin-QuasrgtkFmWR_font-weight);
@@ -458,10 +458,11 @@
   white-space: var(--mixin-QuasrgtkFmWR_white-space);
 }
 
-:where(.root_reset .plasmic_default__h1),
-:where(.root_reset .h1),
-:where(.root_reset :global(.__wab_expr_html_text) h1),
-:where(.root_reset.plasmic_default__h1) {
+:where(.root_reset) h1:where(.h1),
+h1:where(.root_reset.h1),
+:where(.root_reset .__wab_expr_html_text) h1,
+:where(.root_reset_tags) h1,
+h1:where(.root_reset_tags) {
   color: var(--mixin-Hilw8hxorE89_color);
   font-weight: var(--mixin-Hilw8hxorE89_font-weight);
   font-size: var(--mixin-Hilw8hxorE89_font-size);
@@ -469,10 +470,11 @@
   letter-spacing: var(--mixin-Hilw8hxorE89_letter-spacing);
 }
 
-:where(.root_reset .plasmic_default__h2),
-:where(.root_reset .h2),
-:where(.root_reset :global(.__wab_expr_html_text) h2),
-:where(.root_reset.plasmic_default__h2) {
+:where(.root_reset) h2:where(.h2),
+h2:where(.root_reset.h2),
+:where(.root_reset .__wab_expr_html_text) h2,
+:where(.root_reset_tags) h2,
+h2:where(.root_reset_tags) {
   font-family: var(--mixin-F1AQPPJAcNGL_font-family);
   color: var(--mixin-F1AQPPJAcNGL_color);
   font-size: var(--mixin-F1AQPPJAcNGL_font-size);
@@ -481,17 +483,19 @@
   line-height: var(--mixin-F1AQPPJAcNGL_line-height);
 }
 
-:where(.root_reset .plasmic_default__a),
-:where(.root_reset .a),
-:where(.root_reset :global(.__wab_expr_html_text) a),
-:where(.root_reset.plasmic_default__a) {
+:where(.root_reset) a:where(.a),
+a:where(.root_reset.a),
+:where(.root_reset .__wab_expr_html_text) a,
+:where(.root_reset_tags) a,
+a:where(.root_reset_tags) {
   color: var(--mixin-DXl20yc657FN_color);
 }
 
-:where(.root_reset .plasmic_default__h3),
-:where(.root_reset .h3),
-:where(.root_reset :global(.__wab_expr_html_text) h3),
-:where(.root_reset.plasmic_default__h3) {
+:where(.root_reset) h3:where(.h3),
+h3:where(.root_reset.h3),
+:where(.root_reset .__wab_expr_html_text) h3,
+:where(.root_reset_tags) h3,
+h3:where(.root_reset_tags) {
   font-family: var(--mixin-7WJl9oPGJlQU_font-family);
   color: var(--mixin-7WJl9oPGJlQU_color);
   font-size: var(--mixin-7WJl9oPGJlQU_font-size);
@@ -500,10 +504,11 @@
   line-height: var(--mixin-7WJl9oPGJlQU_line-height);
 }
 
-:where(.root_reset .plasmic_default__h4),
-:where(.root_reset .h4),
-:where(.root_reset :global(.__wab_expr_html_text) h4),
-:where(.root_reset.plasmic_default__h4) {
+:where(.root_reset) h4:where(.h4),
+h4:where(.root_reset.h4),
+:where(.root_reset .__wab_expr_html_text) h4,
+:where(.root_reset_tags) h4,
+h4:where(.root_reset_tags) {
   font-family: var(--mixin-CmJ1V2Qp2GWW_font-family);
   color: var(--mixin-CmJ1V2Qp2GWW_color);
   font-size: var(--mixin-CmJ1V2Qp2GWW_font-size);
@@ -512,10 +517,11 @@
   line-height: var(--mixin-CmJ1V2Qp2GWW_line-height);
 }
 
-:where(.root_reset .plasmic_default__code),
-:where(.root_reset .code),
-:where(.root_reset :global(.__wab_expr_html_text) code),
-:where(.root_reset.plasmic_default__code) {
+:where(.root_reset) code:where(.code),
+code:where(.root_reset.code),
+:where(.root_reset .__wab_expr_html_text) code,
+:where(.root_reset_tags) code,
+code:where(.root_reset_tags) {
   background: #f8f8f8;
   font-family: var(--mixin-Yvd4_Hb7UAnU_font-family);
   border-radius: var(--mixin-Yvd4_Hb7UAnU_border-top-left-radius)
@@ -540,10 +546,11 @@
     var(--mixin-Yvd4_Hb7UAnU_border-left-color);
 }
 
-:where(.root_reset .plasmic_default__blockquote),
-:where(.root_reset .blockquote),
-:where(.root_reset :global(.__wab_expr_html_text) blockquote),
-:where(.root_reset.plasmic_default__blockquote) {
+:where(.root_reset) blockquote:where(.blockquote),
+blockquote:where(.root_reset.blockquote),
+:where(.root_reset .__wab_expr_html_text) blockquote,
+:where(.root_reset_tags) blockquote,
+blockquote:where(.root_reset_tags) {
   color: var(--mixin-6Opk4PH7slf8_color);
   padding-left: var(--mixin-6Opk4PH7slf8_padding-left);
   border-left: var(--mixin-6Opk4PH7slf8_border-left-width)
@@ -551,10 +558,11 @@
     var(--mixin-6Opk4PH7slf8_border-left-color);
 }
 
-:where(.root_reset .plasmic_default__pre),
-:where(.root_reset .pre),
-:where(.root_reset :global(.__wab_expr_html_text) pre),
-:where(.root_reset.plasmic_default__pre) {
+:where(.root_reset) pre:where(.pre),
+pre:where(.root_reset.pre),
+:where(.root_reset .__wab_expr_html_text) pre,
+:where(.root_reset_tags) pre,
+pre:where(.root_reset_tags) {
   background: #f8f8f8;
   font-family: var(--mixin-oLQ_cYnXxAAU_font-family);
   border-radius: var(--mixin-oLQ_cYnXxAAU_border-top-left-radius)
@@ -579,10 +587,11 @@
     var(--mixin-oLQ_cYnXxAAU_border-left-color);
 }
 
-:where(.root_reset .plasmic_default__ul),
-:where(.root_reset .ul),
-:where(.root_reset :global(.__wab_expr_html_text) ul),
-:where(.root_reset.plasmic_default__ul) {
+:where(.root_reset) ul:where(.ul),
+ul:where(.root_reset.ul),
+:where(.root_reset .__wab_expr_html_text) ul,
+:where(.root_reset_tags) ul,
+ul:where(.root_reset_tags) {
   display: var(--mixin-6efUiImKJOLr_display);
   flex-direction: var(--mixin-6efUiImKJOLr_flex-direction);
   align-items: var(--mixin-6efUiImKJOLr_align-items);
@@ -594,10 +603,11 @@
   flex-column-gap: var(--mixin-6efUiImKJOLr_flex-column-gap);
 }
 
-:where(.root_reset .plasmic_default__ol),
-:where(.root_reset .ol),
-:where(.root_reset :global(.__wab_expr_html_text) ol),
-:where(.root_reset.plasmic_default__ol) {
+:where(.root_reset) ol:where(.ol),
+ol:where(.root_reset.ol),
+:where(.root_reset .__wab_expr_html_text) ol,
+:where(.root_reset_tags) ol,
+ol:where(.root_reset_tags) {
   display: var(--mixin-JPR44ny-xxpUx_display);
   flex-direction: var(--mixin-JPR44ny-xxpUx_flex-direction);
   align-items: var(--mixin-JPR44ny-xxpUx_align-items);
@@ -609,10 +619,11 @@
   flex-column-gap: var(--mixin-JPR44ny-xxpUx_flex-column-gap);
 }
 
-:where(.root_reset .plasmic_default__h5),
-:where(.root_reset .h5),
-:where(.root_reset :global(.__wab_expr_html_text) h5),
-:where(.root_reset.plasmic_default__h5) {
+:where(.root_reset) h5:where(.h5),
+h5:where(.root_reset.h5),
+:where(.root_reset .__wab_expr_html_text) h5,
+:where(.root_reset_tags) h5,
+h5:where(.root_reset_tags) {
   font-family: var(--mixin-OuYdizI572R6P_font-family);
   color: var(--mixin-OuYdizI572R6P_color);
   font-size: var(--mixin-OuYdizI572R6P_font-size);
@@ -621,10 +632,11 @@
   line-height: var(--mixin-OuYdizI572R6P_line-height);
 }
 
-:where(.root_reset .plasmic_default__h6),
-:where(.root_reset .h6),
-:where(.root_reset :global(.__wab_expr_html_text) h6),
-:where(.root_reset.plasmic_default__h6) {
+:where(.root_reset) h6:where(.h6),
+h6:where(.root_reset.h6),
+:where(.root_reset .__wab_expr_html_text) h6,
+:where(.root_reset_tags) h6,
+h6:where(.root_reset_tags) {
   font-family: var(--mixin-S9szM3at9bsuc_font-family);
   color: var(--mixin-S9szM3at9bsuc_color);
   font-size: var(--mixin-S9szM3at9bsuc_font-size);
@@ -632,9 +644,10 @@
   line-height: var(--mixin-S9szM3at9bsuc_line-height);
 }
 
-:where(.root_reset .plasmic_default__a:hover),
-:where(.root_reset .a:hover),
-:where(.root_reset :global(.__wab_expr_html_text) a:hover),
-:where(.root_reset.plasmic_default__a:hover) {
+:where(.root_reset) a:where(.a):hover,
+a:where(.root_reset.a):hover,
+:where(.root_reset .__wab_expr_html_text) a:hover,
+:where(.root_reset_tags) a:hover,
+a:where(.root_reset_tags):hover {
   color: var(--mixin-6Eb_qoPAr53Qm_color);
 }
