--- a/components/plasmic/isv/PlasmicButton.module.css
+++ b/components/plasmic/isv/PlasmicButton.module.css
@@ -28,6 +28,35 @@
 .rootshowStartIcon {
   padding: 12px 8px;
 }
+.rootshowEndIcon {
+  padding-right: 16px;
+}
+.rootisDisabled {
+  cursor: not-allowed;
+  opacity: 0.6;
+}
+.rootshape_rounded {
+  padding-left: 20px;
+  padding-right: 20px;
+  min-width: 100px;
+  border-radius: 999px;
+}
+.rootshape_round {
+  border-radius: 50%;
+  padding: 12px;
+}
+.rootshape_sharp {
+  border-radius: 0px;
+}
+.rootsize_compact {
+  padding: 6px 16px;
+}
+.rootsize_minimal {
+  padding: 0px;
+}
+.rootcolor_blue {
+  background: var(--token-0kI3JlBolqyCq);
+}
 .rootcolor_green {
   background: var(--token-GDRRKUQBtHsOGH);
 }
@@ -58,43 +87,11 @@
 .rootcolor_softSand {
   background: #eeeeec;
 }
-.rootshowEndIcon {
-  padding-right: 16px;
-}
 .rootcolor_clear {
   background: #ffffff00;
 }
 .rootcolor_link {
   background: #ffffff00;
-}
-.rootisDisabled {
-  cursor: not-allowed;
-  opacity: 0.6;
-}
-.rootshape_rounded {
-  padding-left: 20px;
-  padding-right: 20px;
-  min-width: 100px;
-  border-radius: 999px;
-}
-.rootshape_round {
-  border-radius: 50%;
-  padding: 12px;
-}
-.rootshape_sharp {
-  border-radius: 0px;
-}
-.rootsize_compact {
-  padding: 6px 16px;
-}
-.rootsize_minimal {
-  padding: 0px;
-}
-.rootcolor_blue {
-  background: var(--token-0kI3JlBolqyCq);
-}
-.rootshape_round_size_compact {
-  padding: 6px;
 }
 .rootshowStartIcon_shape_rounded {
   padding-left: 16px;
@@ -102,8 +99,14 @@
 .rootshowEndIcon_shape_rounded {
   padding-right: 16px;
 }
+.rootshape_round_size_compact {
+  padding: 6px;
+}
 .root:hover {
   background: #282826;
+}
+.rootcolor_blue:hover {
+  background: #369eff;
 }
 .rootcolor_green:hover {
   background: #3cb179;
@@ -141,9 +144,6 @@
 .rootcolor_link:hover {
   background: #ffffff00;
 }
-.rootcolor_blue:hover {
-  background: #369eff;
-}
 .root:focus-within {
   box-shadow: 0px 0px 0px 3px #96c7f2;
   outline: none;
@@ -154,6 +154,9 @@
 }
 .root:active {
   background: #2e2e2b;
+}
+.rootcolor_blue:active {
+  background: #52a9ff;
 }
 .rootcolor_green:active {
   background: #4cc38a;
@@ -190,9 +193,6 @@
 }
 .rootcolor_link:active {
   background: #ffffff00;
-}
-.rootcolor_blue:active {
-  background: #52a9ff;
 }
 .startIconContainer {
   display: flex;
@@ -262,6 +262,9 @@
   font-weight: 500;
   white-space: pre-wrap;
 }
+.slotTargetChildrencolor_blue {
+  color: #ffffff;
+}
 .slotTargetChildrencolor_green {
   color: #ffffff;
 }
@@ -298,15 +301,15 @@
 .slotTargetChildrencolor_link {
   color: #0091ff;
 }
-.slotTargetChildrencolor_blue {
-  color: #ffffff;
-}
 .rootcolor_link:hover .slotTargetChildrencolor_link {
   color: #0081f1;
 }
 .rootcolor_link:hover .slotTargetChildrencolor_link > :global(.__wab_text),
 .rootcolor_link:hover
   .slotTargetChildrencolor_link
+  > :global(.__wab_expr_html_text),
+.rootcolor_link:hover
+  .slotTargetChildrencolor_link
   > :global(.__wab_slot-string-wrapper),
 .rootcolor_link:hover
   .slotTargetChildrencolor_link
@@ -315,6 +318,10 @@
 .rootcolor_link:hover
   .slotTargetChildrencolor_link
   > :global(.__wab_slot)
+  > :global(.__wab_expr_html_text),
+.rootcolor_link:hover
+  .slotTargetChildrencolor_link
+  > :global(.__wab_slot)
   > :global(.__wab_slot-string-wrapper),
 .rootcolor_link:hover
   .slotTargetChildrencolor_link
@@ -325,6 +332,11 @@
   .slotTargetChildrencolor_link
   > :global(.__wab_slot)
   > :global(.__wab_slot)
+  > :global(.__wab_expr_html_text),
+.rootcolor_link:hover
+  .slotTargetChildrencolor_link
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
   > :global(.__wab_slot-string-wrapper),
 .rootcolor_link:hover
   .slotTargetChildrencolor_link
@@ -332,6 +344,12 @@
   > :global(.__wab_slot)
   > :global(.__wab_slot)
   > :global(.__wab_text),
+.rootcolor_link:hover
+  .slotTargetChildrencolor_link
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > :global(.__wab_expr_html_text),
 .rootcolor_link:hover
   .slotTargetChildrencolor_link
   > :global(.__wab_slot)
