--- a/components/plasmic/isv/PlasmicHomepage.module.css
+++ b/components/plasmic/isv/PlasmicHomepage.module.css
@@ -34,7 +34,7 @@
   height: auto;
   max-width: 100%;
   min-width: 0;
-  padding: 0px;
+  padding: 20px 0px 0px;
 }
 .freeBox__wFFs9 > :global(.__wab_flex-container) {
   flex-direction: column;
@@ -76,6 +76,14 @@
   line-height: 1.5;
   min-width: 0;
 }
+.text__vB8Rj {
+  font-size: 30px;
+  text-decoration-line: underline;
+  padding-bottom: 20px;
+  font-family: "Iceland";
+  color: var(--token-H64AMzIdd6_f2);
+  text-transform: uppercase;
+}
 .img {
   position: relative;
   object-fit: cover;
@@ -94,8 +102,54 @@
     max-width: 400px;
   }
 }
-.freeBox__wrEd8 {
+.freeBox__cwUK {
   display: flex;
+  position: relative;
+  flex-direction: row;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  min-width: 0;
+  padding: 8px;
+}
+.freeBox__cwUK > :global(.__wab_flex-container) {
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  min-width: 0;
+  margin-left: calc(0px - 10px);
+  width: calc(100% + 10px);
+}
+.freeBox__cwUK > :global(.__wab_flex-container) > *,
+.freeBox__cwUK > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox__cwUK > :global(.__wab_flex-container) > picture > img,
+.freeBox__cwUK
+  > :global(.__wab_flex-container)
+  > :global(.__wab_slot)
+  > picture
+  > img {
+  margin-left: 10px;
+}
+.svg__oMGgd {
+  position: relative;
+  object-fit: cover;
+  max-width: 100%;
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+}
+.text__xHyN7 {
+  padding-left: 0px;
+  font-size: 18px;
+  text-decoration-line: underline;
+  align-self: flex-end;
+}
+@media (min-width: 700px) {
+  .text__xHyN7 {
+    font-size: 16px;
+  }
+}
+.freeBox__wrEd8 {
   position: relative;
   flex-direction: column;
   align-items: center;
@@ -104,6 +158,7 @@
   height: auto;
   max-width: 100%;
   min-width: 0;
+  display: none;
   padding: 8px;
 }
 .link {
