--- a/components/plasmic/isv/PlasmicSelect__Option.module.css
+++ b/components/plasmic/isv/PlasmicSelect__Option.module.css
@@ -23,8 +23,10 @@
   white-space: pre;
 }
 .slotTargetChildren > :global(.__wab_text),
+.slotTargetChildren > :global(.__wab_expr_html_text),
 .slotTargetChildren > :global(.__wab_slot-string-wrapper),
 .slotTargetChildren > :global(.__wab_slot) > :global(.__wab_text),
+.slotTargetChildren > :global(.__wab_slot) > :global(.__wab_expr_html_text),
 .slotTargetChildren
   > :global(.__wab_slot)
   > :global(.__wab_slot-string-wrapper),
@@ -35,12 +37,21 @@
 .slotTargetChildren
   > :global(.__wab_slot)
   > :global(.__wab_slot)
+  > :global(.__wab_expr_html_text),
+.slotTargetChildren
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
   > :global(.__wab_slot-string-wrapper),
 .slotTargetChildren
   > :global(.__wab_slot)
   > :global(.__wab_slot)
   > :global(.__wab_slot)
   > :global(.__wab_text),
+.slotTargetChildren
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > :global(.__wab_slot)
+  > :global(.__wab_expr_html_text),
 .slotTargetChildren
   > :global(.__wab_slot)
   > :global(.__wab_slot)
