--- a/components/plasmic/isv/PlasmicHomepage.module.css
+++ b/components/plasmic/isv/PlasmicHomepage.module.css
@@ -313,6 +313,9 @@
   max-width: 100%;
   display: flex;
 }
+.menuItemclosed:global(.__wab_instance) {
+  display: none;
+}
 .contentfulRichText:global(.__wab_instance) {
   max-width: 100%;
   object-fit: cover;
