--- a/components/plasmic/isv/PlasmicHomepage.module.css
+++ b/components/plasmic/isv/PlasmicHomepage.module.css
@@ -26,7 +26,7 @@
 .header:global(.__wab_instance) {
   position: relative;
 }
-.event2:global(.__wab_instance) {
+.event:global(.__wab_instance) {
   max-width: 100%;
   object-fit: cover;
   position: relative;
