--- a/components/plasmic/isv/PlasmicAddItem.module.css
+++ b/components/plasmic/isv/PlasmicAddItem.module.css
@@ -231,12 +231,12 @@
 .svg__fshV5 {
   position: relative;
   object-fit: cover;
-  width: 1em;
+  width: auto;
   height: 1em;
 }
 .svg__aBsuh {
   position: relative;
   object-fit: cover;
-  width: 1em;
+  width: auto;
   height: 1em;
 }
