--- a/components/plasmic/isv/PlasmicLogin.module.css
+++ b/components/plasmic/isv/PlasmicLogin.module.css
@@ -90,13 +90,13 @@
 .svg__qytWh {
   position: relative;
   object-fit: cover;
-  width: 1em;
+  width: auto;
   height: 1em;
 }
 .svg___3YdBq {
   position: relative;
   object-fit: cover;
-  width: 1em;
+  width: auto;
   height: 1em;
 }
 .freeBox___19A5C {
@@ -140,13 +140,13 @@
 .svg__buu9I {
   position: relative;
   object-fit: cover;
-  width: 1em;
+  width: auto;
   height: 1em;
 }
 .svg___4MKiM {
   position: relative;
   object-fit: cover;
-  width: 1em;
+  width: auto;
   height: 1em;
 }
 .freeBox__dulrE {
@@ -168,12 +168,12 @@
 .svg___9ASgD {
   position: relative;
   object-fit: cover;
-  width: 1em;
+  width: auto;
   height: 1em;
 }
 .svg__tBdLi {
   position: relative;
   object-fit: cover;
-  width: 1em;
+  width: auto;
   height: 1em;
 }
